--- a/upload/converter/view/stylesheet/stylesheet.css
+++ b/upload/converter/view/stylesheet/stylesheet.css
@@ -1,6 +1,6 @@
 body { background: #F4F4F4; font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #000000; }
 .container { margin: 20px auto; width: 100%;max-width:1080px;height: auto; background: #FBFBFB; padding: 30px; border: 1px solid #EBEBEB; }
-.content { margin: 20px auto; width: 100%; max-width: 980px; height: auto; background: #FBFBFB; padding: 30px; border: 1px solid #EBEBEB; }
+.content { width: 96%;  height: auto; background: #FBFBFB; ;padding: 30px 0px 30px 30px; border: 1px solid #EBEBEB; }
 .footer { margin: 40px auto 10px auto; text-align: center; }
 	.footer .link { margin-right: 30px; text-decoration: none; color: #666666; }
 .msg { background: #DFF9DF; margin-top: 5px; padding: 10px; border: 1px solid #EBEBEB; }
