--- a/upload/converter/view/stylesheet/stylesheet.css
+++ b/upload/converter/view/stylesheet/stylesheet.css
@@ -1,34 +1,269 @@
-body { background: #F4F4F4; font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #000000; }
-.container { margin: 20px auto; width: 100%;max-width:1080px;height: auto; background: #FBFBFB; padding: 30px; border: 1px solid #EBEBEB; }
-.content { width: 96%;  height: auto; background: #FBFBFB; ;padding: 30px 0px 30px 30px; border: 1px solid #EBEBEB; }
-.footer { margin: 40px auto 10px auto; text-align: center; }
-	.footer .link { margin-right: 30px; text-decoration: none; color: #666666; }
-.msg { background: #DFF9DF; margin-top: 5px; padding: 10px; border: 1px solid #EBEBEB; }
-.msg-note { background-color: #F7F5D4; }
-.note { border: 1px solid #EBEBEB; font-weight: bold; margin: 5px; padding: 5px; border: 1px solid #EBEBEB; }
-.error { border: 1px solid #FF0101; margin-top: 5px; padding: 10px; background-color: #FFEEEE; }
-.header { border: 1px solid #0A4869; margin-top: 5px; padding: 10px; background-color: #E2F7FF; }
-.step { float: left; background-color: #F5F5F5; margin: 15px 10px 0 0; padding: 5px; text-align: center; font-size: 24px; color: #7C7C7C; border: 1px solid #DBDBDB; }
-.submit { float: left; background-color: #F5F5F5; margin: 15px 10px 0 0; padding: 5px; text-align: center; font-size: 18px; color: #7C7C7C; border: 1px solid #DBDBDB; cursor: pointer; }
-.block { margin-top: 5px; }
-.block-big { margin: 20px 0; }
-.help { display: none; margin-top: 15px; padding: 15px; border: 1px solid #EBEBEB; background-color: #F7F7F7; color: #606060; }
-.round { -webkit-border-radius: 5px 5px 5px 5px; -moz-border-radius: 5px 5px 5px 5px; -khtml-border-radius: 5px 5px 5px 5px; border-radius: 5px 5px 5px 5px;}
-.buttons { margin-top: 45px; }
-.green { color: #085C2F; }
-.red { color: #FF0000; }
-.bg-green { background-color: #CDFFDE; }
-.bg-red { background-color: #FFB7B7;}
-.right { float: right; margin-right:10px;}
-.clr { clear: both; }
-.script-filename{ margin-left:70px; font-size:13px; color:#666666; }
-.heading h1, .heading h2{display:inline;}
+body {
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 400;
+	color: #222222;
+	font-size: 14px;
+	line-height: 20px;
+	width: 100%;
+}
+h1, h2, h3, h4, h5, h6 {
+	color: #444;
+}
+#container{
+	width:90%;
+	margin-left:auto;
+	margin-right:auto;
+	border:1px solid #dddddd;
+}
+.start{
+	height:900px;
+}
+#content {
+  height: auto;
+  background: #FBFBFB;
+  padding: 30px;
+  border: 1px solid #EBEBEB;
+}
+.content{
+	width:100%;
+}
+/* breadcrumb */
+.breadcrumb i {
+	font-size: 15px;
+}
+.breadcrumb > li {
+	text-shadow: 0 1px 0 #FFF;
+	padding: 0 20px;
+	position: relative;
+	white-space: nowrap;
+}
+.breadcrumb > li + li:before {
+	content: '';
+	padding: 0;
+}
+.breadcrumb > li:after {
+	content: '';
+	display: block;
+	position: absolute;
+	top: -3px;
+	right: -5px;
+	width: 26px;
+	height: 26px;
+	border-right: 1px solid #DDD;
+	border-bottom: 1px solid #DDD;
+	-webkit-transform: rotate(-45deg);
+	-moz-transform: rotate(-45deg);
+-o-transform: rotate(-45deg);
+	transform: rotate(-45deg);
+}
+#footer, .breadcrumb {
+  padding: 13px 15px;
+  margin-bottom: 5px;
+  list-style: none;
+  background-color: #f5f5f5;
+  border-radius: 4px;
+	margin: 0 0 4px 0;
+	border: 1px solid #ddd;
+}
+.breadcrumb > li {
+  display: inline-block;
+}
+.breadcrumb > li + li:before {
+  padding: 0 5px;
+  color: #ccc;
+}
+.breadcrumb > .active {
+  color: #777;
+}
+.list-group {
+  padding-left: 0;
+  margin-bottom: 20px;
+}
+.list-group-item {
+  position: relative;
+  display: block;
+  padding: 10px 15px;
+  margin-bottom: -1px;
+  background-color: #eeeeee;
+  border: 1px solid #dddddd;
+}
+.list-group-item:first-child {
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+}
+.list-group-item:last-child {
+  margin-bottom: 0;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+.list-group-item > .badge {
+  float: right;
+}
+.list-group-item > .badge + .badge {
+  margin-right: 5px;
+}
+a.list-group-item {
+  color: #555555;
+}
+a.list-group-item .list-group-item-heading {
+  color: #333333;
+}
+a.list-group-item:hover,
+a.list-group-item:focus {
+  text-decoration: none;
+  background-color: #f5f5f5;
+}
+a.list-group-item.active,
+a.list-group-item.active:hover,
+a.list-group-item.active:focus {
+  z-index: 2;
+  color: #ffffff;
+  background-color: #428bca;
+  border-color: #428bca;
+}
+a.list-group-item.active .list-group-item-heading,
+a.list-group-item.active:hover .list-group-item-heading,
+a.list-group-item.active:focus .list-group-item-heading {
+  color: inherit;
+}
+a.list-group-item.active .list-group-item-text,
+a.list-group-item.active:hover .list-group-item-text,
+a.list-group-item.active:focus .list-group-item-text {
+  color: #e1edf7;
+}
+.list-group-item-heading {
+  margin-top: 0;
+  margin-bottom: 5px;
+}
 
-.breadcrumb {margin: 0 0 20px 0;padding: 8px 0;border: 1px solid #ddd;font-size: 15px;padding: 0 20px;}
- a.button {text-decoration: none;color: #FFF;display: inline-block;padding: 5px 15px 5px 15px;background: #003A88;-webkit-border-radius: 10px 10px 10px 10px;-moz-border-radius: 10px 10px 10px 10px;-khtml-border-radius: 10px 10px 10px 10px;border-radius: 10px 10px 10px 10px;}
-.login{border: 1px solid #d3d3d3; -webkit-border-radius: 5px 5px 5px 5px; -moz-border-radius: 5px 5px 5px 5px; -khtml-border-radius: 5px 5px 5px 5px; border-radius: 5px 5px 5px 5px;}
-.forgotten{ margin: 20px auto; width: 90%; max-width: 980px; height: auto; background: #FBFBFB; padding: 30px; border: 1px solid #d3d3d3; }
-.form{width:40%;}
-.type{list-style-type: none;}
-.success {padding: 10px 10px 10px 33px;	margin-bottom: 15px;background: #EAF7D9 url('../image/success.png') 10px center no-repeat;border: 1px solid #BBDF8D;color: #555555;}
-.warning {padding: 10px 10px 10px 33px;	margin-bottom: 15px;background: #FFD1D1 url('../image/error.png') 10px center no-repeat;border: 1px solid #F8ACAC;	color: #555555;}
+.list-group-item-text {
+  margin-bottom: 0;
+  line-height: 1.3;
+}
+.buttons{
+	background:#eeeeee;
+	width:98%;
+	padding:10px 0px 10px 0px;
+	text-align:center;
+	border:solid #ADD8E6 1px;
+}
+.buttons a{
+	font-size:14px;
+	padding:0px 10px;
+	font-weight:bold;
+}
+#footer a{
+	font-size:14px;
+	padding:0px 10px;
+}
+#footer > .bottom{
+	float:right;
+	margin-right:20px;
+}
+#footer, #container, #content{
+	clear:both;
+}
+.help_28x28{float:right;}
+#column-right{
+	float:right;
+	width:240px;
+	margin-right:3px;
+}
+#column-left{
+	float:left;
+	width:800px;
+	background: #DFF9DF;
+	padding-left:10px;
+	padding-right:12px;
+	margin-top:15px;
+}
+.note{
+	padding: 10px 0px;
+}
+.bg-green {
+    background-color: #CDFFDE;
+}
+.bg-red {
+	 background-color: #FFB7B7;
+}
+.msg {
+	 background: #DFF9DF;
+     margin-top: 5px;
+     padding: 10px 0px 10px 8px;
+     border: 1px solid #EBEBEB;
+     clear:both;
+}
+pre{
+	margin-left:40px;
+	color:#000000;
+}
+.start-upgrade{
+	margin-top:28px;
+}
+.upgrade{
+	margin-top:-6px;
+}
+.header {
+	border: 1px solid #dddddd;
+	margin-top: 5px;
+	padding: 10px;
+	background-color: #E2F7FF;
+}
+a.button {
+	text-decoration: none;
+	color: #7C7C7C;
+	display: inline-block;
+	padding: 5px 15px 5px 15px;
+	background: #F5F5F5;
+	border: solid 1px #ADD8E6;
+	-webkit-border-radius: 10px 10px 10px 10px;
+	-moz-border-radius: 10px 10px 10px 10px;
+	-khtml-border-radius: 10px 10px 10px 10px;
+	border-radius: 10px 10px 10px 10px;
+}
+.step {
+	float: left;
+	background-color: #F5F5F5;
+	margin: 15px 10px 0 0;
+	padding: 10px 0px;
+	width:100%;
+	text-align: center;
+	font-size: 24px;
+	color: #7C7C7C;
+	font-weight:bold;
+	margin:5px 0px;
+	border: 1px solid #ADD8E6;
+}
+.submit {
+	background-color: #F5F5F5;
+	margin: 4px 10px 4px 0;
+	padding: 5px;
+	text-align: center;
+	font-size: 18px;
+	color: #7C7C7C;
+	border: 1px solid #ADD8E6;
+	cursor: pointer;
+}
+.images{
+	height:300px;
+}
+.block {
+	margin-top: 5px;
+	width:470px;
+}
+.error-warning{
+	height:410px;
+}
+.success {
+	padding: 10px 10px 10px 33px;
+	margin-bottom: 15px;
+	background: #EAF7D9 url('../image/success.png') 10px center no-repeat;
+	border: 1px solid #BBDF8D;color: #555555;
+}
+.warning {
+	padding: 10px 10px 10px 33px;
+	margin-bottom: 15px;
+	background: #FFD1D1 url('../image/error.png') 10px center no-repeat;
+	border: 1px solid #F8ACAC;
+	color: #555555;
+}
